# NGIN-Framework

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUtils.cmake  cpp.hint
docs/: Doxyfile.in
examples/: AppxManifest.xml  CMakeLists.txt  main.cpp
include/: CMakeHeaders.cmake  Entrypoint.hpp
include/NGIN/: Common.hpp  Defines.hpp  Entrypoint.hpp  Logging.hpp
include/NGIN/Async/: Coroutine.hpp  CoroutineScheduler.hpp  IAwaitable.hpp  NextFrameAwaitable.hpp  Task.hpp  TimeDelaySecondsAwaitable.hpp
include/NGIN/Common/: Containers.hpp  Defines.hpp  Memory.hpp  Types.hpp
include/NGIN/Common/Containers/: Array.hpp  Deque.hpp  Map.hpp  UnorderedMap.hpp  Vector.hpp
include/NGIN/Common/Memory/: Ref.hpp  Scope.hpp  Ticket.hpp
include/NGIN/Common/Types/: Primitive.hpp  SourceLocation.hpp  String.hpp
include/NGIN/Containers/: Array.hpp  Deque.hpp  DynamicStorage.hpp  HybridStorage.hpp  Map.hpp  StaticRingBuffer.hpp  StaticStorage.hpp  UnorderedMap.hpp  Vector.hpp
include/NGIN/Encoding/: Utf8.hpp
include/NGIN/IO/: FileSystem.hpp  Format.hpp  Path.hpp
include/NGIN/Logging/: ConsoleSink.hpp  Defines.hpp  ErrorSink.hpp  IFormatter.hpp  ILogger.hpp  ISink.hpp  LogLevel.hpp  SimpleFormatter.hpp  SimpleLogger.hpp  eLogLevel.hpp
include/NGIN/Math/: Ratio.hpp  Vector2.hpp  Vector3.hpp
include/NGIN/Memory/: Alignment.hpp  ExpandingAllocator.hpp  FallbackAllocator.hpp  FreeListAllocator.hpp  GrowingAllocator.hpp  IAllocator.hpp  LinearAllocator.hpp  Mallocator.hpp  STLAllocator.hpp  SynchronizedAllocator.hpp
include/NGIN/Memory/Internal/: Alignment.hpp
include/NGIN/Meta/: Concepts.hpp  EnumTraits.hpp  FunctionTraits.hpp  TypeId.hpp  TypeInfo.hpp  TypeName.hpp  TypeWrapper.hpp
include/NGIN/Platform/Windows/: SEH.hpp
include/NGIN/Serialization/JSON/: JSONLexer.hpp  JSONParser.hpp
include/NGIN/Serialization/XML/: XMLDocument.hpp  XMLLexer.hpp  XMLParser.hpp
include/NGIN/System/: Info.hpp
include/NGIN/System/Exceptions/: Error.hpp
include/NGIN/Time/: Defines.hpp  Timer.hpp  Util.hpp
include/NGIN/Types/: Primitives.hpp  String.hpp
include/NGIN/Util/: Format.hpp  ISingleton.hpp  UUID.hpp
src/: CMakeDependencies.cmake  CMakeLists.txt  CMakeSources.cmake  main.cpp  test.cpp
src/NGIN/: NGIN.ixx  Util.ixx
src/NGIN/Common/: Containers.ixx  Memory.ixx  Types.ixx
src/NGIN/Common/Containers/: Array.ixx  Deque.ixx  Map.ixx  UnorderedMap.ixx  Vector.ixx
src/NGIN/Common/Memory/: Ref.ixx  Scope.ixx  Ticket.ixx
src/NGIN/Common/Types/: Primitive.ixx  String.ixx
src/NGIN/Containers/: Array.ixx  Containers.ixx  Deque.ixx  Map.ixx  UnorderedMap.ixx  Vector.ixx
src/NGIN/Encoding/: Utf8.cpp
src/NGIN/IO/: FileSystem.cpp  Format.ixx  IO.ixx  Path.cpp
src/NGIN/IO/Platform/Win32/: FileSystem.cpp
src/NGIN/IO/Platform/WinRT/: FileSystem.cpp
src/NGIN/Logging/: ConsoleSink.cpp  ConsoleSink.ixx  Defines.cpp  ErrorSink.cpp  IFormatter.ixx  ILogger.ixx  ISink.ixx  LogLevel.ixx  Logging.ixx  MTLogger.ixx  SimpleFormatter.cpp  SimpleFormatter.ixx  SimpleLogger.ixx
src/NGIN/Math/: Math.ixx  Vector3.cpp
src/NGIN/Memory/: AlignmentUtils.ixx  FreeListAllocator.cpp  FreeListAllocator.ixx  IAllocator.ixx  LinearAllocator.cpp  LinearAllocator.ixx  Mallocator.cpp  Mallocator.ixx  Memory.ixx  PoolAllocator.ixx  Ref.ixx  Scope.ixx  StackAllocator.ixx  Ticket.ixx
src/NGIN/Meta/: EnumTraits.ixx  FunctionTraits.ixx  Meta.ixx  TypeInfo.ixx
src/NGIN/Platform/Windows/: SEH.cpp
src/NGIN/Reflection/: IReflectable.ixx  Reflection.ixx  Registry.ixx
src/NGIN/Serialization/JSON/: JSONLexer.cpp  JSONParser.cpp
src/NGIN/Serialization/XML/: XMLLexer.cpp
src/NGIN/System/Exceptions/: Error.cpp
src/NGIN/System/Platform/Windows/: Info.cpp
src/NGIN/Time/: Ratio.ixx  Seconds.ixx  Time.ixx  Timer.ixx  Units.ixx
src/NGIN/Types/: Optional.ixx  Primitives.ixx  String.ixx  Types.ixx
src/NGIN/Units/: IUnit.ixx  Ratio.ixx  TimeUnits.ixx  Units.ixx
src/NGIN/Util/: Format.ixx  StringUtil.ixx  TimeUtil.ixx  UUID.cpp  Util.ixx
tests/: CMakeLists.txt  main.cpp
tests/NGIN/IO/: Path.cpp
tests/NGIN/Memory/: FreeListAllocator.cpp  LinearAllocator.cpp
tests/NGIN/Meta/: FunctionTraits.cpp  TypeInfo.cpp
tests/NGIN/Serialization/JSON/: JSONLexer.cpp
